# volume-rendering

./: CMakeLists.txt
include/: camera.h  shader.h
include/glad/: glad.h
src/: fs.glsl  glad.c  main.cc  vs.glsl
